<resources>
    <string name="app_name">protosight</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">New User? <u>Register Now</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="title_activity_creator_landing_page">CreatorLandingPage</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--Navigation bar string -->
    <string name="nav_home">Home</string>
    <string name="nav_projects">Prototypes</string>
    <string name="nav_tasks">Tests</string>
    <string name="nav_logout">Logout</string>


    <!--Home page Fragment string -->
    <string name="add_task">Add Tests</string>
    <string name="add_project">Add Prototypes</string>


    <!-- Create Project string -->
    <string name="save_project">Save Project</string>
    <string name="enter_name">Enter your project name</string>
    <string name="upload_image">Upload Images</string>

    <string name="link_screen">Link Screen</string>
    <string name="select_image_link_to">Select one screen to link to</string>

    <!-- Play Prototype -->
    <string name="paly_proto">Play Prototype</string>
    <string name="stop_proto">Exit</string>


    <string name="select_a_prototype_you_would_like_to_test">Select a prototype you would like to test:</string>
    <string name="the_name_you_enter_below_will_be_displayed_during_user_testing">The name you enter below will be displayed during user testing.</string>
    <string name="test_name">Test Name</string>
    <string name="enter_your_test_name">Enter your test name</string>
    <string name="enter">Enter</string>
    <string name="test_setup">Test Setup</string>
    <string name="test_result">Test Result</string>

    <string name="task_s">Task(s)</string>
    <string name="create_up_to_3_tasks">Create up to 3 tasks</string>
    <string name="prototype">Prototype</string>
    <string name="task1">Task1</string>
    <string name="task_1">Task 1</string>
    <string name="add_a_task">Add a task</string>
    <string name="test_code">Test Code</string>
    <string name="generate_a_test_code_only_after_all_your_tasks_have_been_finalized">Generate a test code only after all your tasks have been finalized</string>
    <string name="the_test_code_can_only_be_generated_once">! The test code can only be generated once</string>
    <string name="generate">Generate</string>
    <string name="task_scenario">Task scenario:</string>
    <string name="state_your_scenario_clearly_and_concisely">State your scenario clearly and concisely</string>
    <string name="user_task">User Task:</string>
    <string name="state_your_task_clearly_and_concisely">State your task clearly and concisely</string>
    <string name="_0_300">0/300</string>
    <string name="_0_200">0/200</string>
    <string name="post_task_questionnaire">Post-task questionnaire:</string>
    <string name="create_up_to_three_questions">Create up to three questions</string>
    <string name="for_each_question_users_will_only_have_100_characters_to_respond">!For each question, users will only have 100 characters to respond</string>
    <string name="first_question">First Question:</string>
    <string name="_0_150">0/150</string>
    <string name="add_a_question">Add a question</string>
    <string name="save_task">Save Task</string>
    <string name="add_the_goal_page">ADD THE GOAL PAGE</string>


    <!-- Participant test -->
    <string name="hello">Welcome Study Participant</string>
    <string name="enter_code_msg">Please enter the test code</string>
    <string name="submit_code">Enter</string>
    <string name="start_test">Start Task</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="permission_text">permission_text</string>
    <string name="task">Task</string>
    <string name="questionnaire_response">QUESTIONNAIRE RESPONSE</string>
    <string name="questionnaire_responsee">Questionnaire Response</string>
    <string name="q1">Q1</string>

</resources>