<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/task_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_primary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Task" />

    <ScrollView
        android:id="@+id/task_creation_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_toolBar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/task_creation_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_scenario_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/task_scenario"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/task_scenario_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/state_your_scenario_clearly_and_concisely"
                android:textSize="18sp"
                android:layout_marginStart="10dp" />

            <EditText
                android:id="@+id/task_scenario_content"
                android:gravity="top"
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_border"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="300"/>

            <TextView
                android:id="@+id/task_scenario_words_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:textSize="16sp"
                android:text="@string/_0_300"/>

            <TextView
                android:id="@+id/user_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/user_task"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_task_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/state_your_task_clearly_and_concisely"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:id="@+id/user_task_content"
                android:gravity="top"
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_border"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="200"/>

            <TextView
                android:id="@+id/user_task_words_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:textSize="16sp"
                android:text="@string/_0_200"/>

            <TextView
                android:id="@+id/post_task_questionnaire_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/post_task_questionnaire"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_task_questionaire_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/create_up_to_three_questions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/post_task_questionnaire_warning_instruction"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:background="#ACACAC"
                android:gravity="start"
                android:text="@string/for_each_question_users_will_only_have_100_characters_to_respond"
                android:textSize="16sp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/first_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/first_question"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/first_question_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_border"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="150"/>

            <TextView
                android:id="@+id/first_question_words_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:text="@string/_0_150"
                android:textSize="16sp" />

            <Button
                android:id="@+id/add_question_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/my_add_task_buttom"
                android:gravity="center"
                android:text="@string/add_a_question"
                android:textColor="#050505"
                android:textSize="18sp"
                app:backgroundTint="#F8F9FA" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>