<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/Task_s"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:gravity="center|start"
        android:text="@string/task_s"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/Create_up_to_3_tasks"
        android:layout_width="239dp"
        android:layout_height="27dp"
        android:gravity="start"
        android:text="@string/create_up_to_3_tasks"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <ScrollView
        android:id="@+id/scrollViewTask"
        android:layout_width="0dp"
        android:layout_height="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214">

        <LinearLayout
            android:id="@+id/linearLayoutTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/test_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/test_code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewTask"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/test_code_intsruction"
        android:layout_width="381dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:text="@string/generate_a_test_code_only_after_all_your_tasks_have_been_finalized"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_code_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/test_code_instruction_2"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:background="#ACACAC"
        android:gravity="center"
        android:text="@string/the_test_code_can_only_be_generated_once"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_code_intsruction"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/generate_testcode"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_code_instruction_2"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/test_code"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/black_border"
        android:gravity="center"
        android:textColor="#090909"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/generate_testcode"
        app:layout_constraintTop_toBottomOf="@+id/test_code_instruction_2"
        app:layout_constraintVertical_bias="0.214" />

</androidx.constraintlayout.widget.ConstraintLayout>