<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/Test_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_primary"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Test_Name_Instruction"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:text="@string/the_name_you_enter_below_will_be_displayed_during_user_testing"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test_Naming_Page_Title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Test_Naming_Page_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_name"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test_Name"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/Enter_Test_Name"
        android:layout_width="375dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/enter_your_test_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test_Name_Instruction"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Test_Name_Buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/enter"
        android:onClick="NameTheTest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enter_Test_Name"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>