<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParticipantLandingPage">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"

        android:layout_height="180dp"
        android:layout_marginTop="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/helloview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textColor="#5025FC"


            android:gravity="center_vertical|center"
            android:paddingLeft="18dp"
            android:text="@string/hello"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/participant_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/helloview"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:hint="Name"
            android:layout_marginEnd="50dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:textColor="#090909"
            android:textSize="18sp"
            android:textColorHint="@color/blue_primary"
             />


        <EditText
            android:id="@+id/test_code"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/participant_name"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:hint="Test code"
            android:textColor="#090909"
            android:textColorHint="@color/blue_primary"
            android:textSize="18sp"

             />

    </RelativeLayout>

    <Button
        android:id="@+id/test_code_enter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_border"
        android:onClick="testCodeOnSubmit"
        android:text="@string/submit_code"
        android:textColor="@color/blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invalid_code" />

    <TextView
        android:id="@+id/invalid_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/invalid_code"
        android:textColor="#E32525"
        android:textSize="12sp"
        android:visibility="invisible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ImageView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_logo_page"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>